# OrbitShell

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  agents.json  build.rs  orbitshell_rules.json  plan.md  registry-sample.json  repo.config.json
.cargo/: config.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-13-acp-registry-implementation.md  2026-03-18-acp-runtime-selection-implementation.md  2026-03-19-acp-approval-and-terminal-performance-implementation.md  2026-03-19-acp-combobox-ux-implementation.md  2026-04-09-github-release-packaging.md  2026-04-13-base-terminal-implementation.md
docs/superpowers/specs/: 2026-03-13-acp-registry-design.md  2026-03-18-acp-runtime-selection-design.md  2026-03-19-acp-combobox-ux-design.md  2026-04-13-base-terminal-design.md
installer/linux/: install.sh
installer/windows/: orbitshell.nsi
packaging/linux/: AppRun  dev.carlosmiguel.orbitshell.desktop  dev.carlosmiguel.orbitshell.metainfo.xml  orbitshell.appdata.xml  orbitshell.desktop
src/: lib.rs  main.rs
src/acp/: client.rs  manager.rs  mod.rs  model_discovery.rs  resolve.rs  runtime_prefs.rs  storage.rs  transport.rs
src/acp/install/: binary.rs  mod.rs  runner.rs  state.rs
src/acp/registry/: cache.rs  fetch.rs  mod.rs  model.rs
src/core/: state.rs
src/events/: mod.rs
src/git/: mod.rs
src/mcp/: config.rs  mod.rs  probe.rs
src/terminal/: buffer.rs  mod.rs  parser.rs
src/ui/: appearance.rs  icons.rs  launch.rs  mod.rs  recent.rs  text_edit.rs
src/ui/views/: agent_view.rs  settings_view.rs  sidebar_view.rs  tab_bar.rs  tab_view.rs  top_bar.rs  welcome_view.rs
tests/: acp_installers.rs  acp_manager_availability.rs  acp_manager_defaults.rs  acp_registry_cache.rs  acp_resolve.rs  acp_runtime_mcp.rs  acp_runtime_selection.rs  acp_storage.rs  mcp_config.rs
