[package]
name = "orbitshell"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
portable-pty = "0.8"
vte = "0.11"
git2 = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lucide-icons = "0.563.0"
futures = "0.3"
