[package]
name = "orbitshell"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
portable-pty = "0.8"
git2 = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lucide-icons = "0.563.0"
futures = "0.3"

[build-dependencies]
winres = "0.1"
