[package]
name = "orbitshell"
version = "0.1.0"
edition = "2024"
description = "Modern block-based terminal UI built with Rust and GPUI."
repository = "https://github.com/solrachix/OrbitShell"
homepage = "https://carlos-miguel.dev"

[package.metadata.deb]
maintainer = "Carlos Miguel <eu@carlos-miguel.dev>"
copyright = "2026, Carlos Miguel"
section = "utility"
priority = "optional"
depends = "$auto"
extended-description = """\
OrbitShell is a local-first desktop terminal experience with block-based output,
inline file previews, ACP/MCP surfaces, and project-oriented navigation.
"""
merge-assets = [
  ["packaging/linux/orbitshell.desktop", "usr/share/applications/orbitshell.desktop", "644"],
  ["assets/logo.png", "usr/share/icons/hicolor/256x256/apps/orbitshell.png", "644"],
]

[dependencies]
gpui = "0.2.2"
portable-pty = "0.8"
git2 = "0.18"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lucide-icons = "0.563.0"
futures = "0.3"
semver = "1"
sha2 = "0.10"
ureq = "2"
zip = "2"
flate2 = "1"
tar = "0.4"
bzip2 = "0.5"
webbrowser = "1"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"
once_cell = "1"
